# Reference-Management

./: .gitattributes  .gitignore  AGENTS.md  README.md  字段补全检查.md  文献索引.md  更新报告.md  研究主题索引.md  研究方法索引.md
.agents/skills/DeepPaperNote/: .gitignore  AGENTS.md  CHANGELOG.md  README.md  README.zh-CN.md  SKILL.md  pyproject.toml
.agents/skills/DeepPaperNote/agents/: openai.yaml
.agents/skills/DeepPaperNote/assets/: note_template_v2.md
.agents/skills/DeepPaperNote/references/: figure-placement.md  figures.md  final-writing.md  model-synthesis.md  note-quality.md  obsidian-format.md  v2-workflow.md  vault-v2.md  vault.md  workflow.md  writing.md
.agents/skills/DeepPaperNote/scripts/: build_figure_contact_sheet_final_v2.py  build_figure_contact_sheet_v2.py  build_synthesis_bundle.py  build_synthesis_bundle_v2.py  build_vault_corpus_inputs_v2.py  check_environment.py  collect_metadata.py  common.py  configure_obsidian_v2.py  configure_repository_v2.py  contracts.py  contracts_v2.py  create_input_record.py  create_migration_snapshot.py  create_paper_record_v2.py  extract_evidence.py  extract_evidence_contract_v2.py  extract_evidence_v2.py  extract_pdf_assets.py  extract_pdf_assets_contract_v2.py  extract_pdf_assets_v2.py  fetch_pdf.py  figure_artifact_gate_v2.py  figure_contracts.py  figure_contracts_v2.py  figure_visual_review_contracts_v2.py  finalize_repository_routing_v2.py  lint_note.py  lint_note_final_v2.py  lint_note_release_v2.py  lint_note_v2.py  lint_vault.py  locate_zotero_attachment.py  materialize_figure_asset.py  materialize_figure_asset_v2.py  (+29 more)
文献/: 论文导航.md  (+1 more)
(+80 files in other folders)
