[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "deeppapernote"
version = "1.2.0"
description = "Repo-local Codex skill for evidence-first paper notes in an Obsidian vault."
readme = "SKILL.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
  "PyMuPDF>=1.24",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6.0",
]

[tool.setuptools]
py-modules = []

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
